--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "droidmessage",
-  "version": "1.0.0",
-  "description": "Android messages on desktop",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SebastianCzoch/DroidMessage.git"
-  },
-  "author": "",
+  "name": "DroidMessage",
+  "version": "0.1.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SebastianCzoch/DroidMessage/issues"
+  "scripts": {
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack",
+    "dist": "yarn compile && electron-builder",
+    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
-  "homepage": "https://github.com/SebastianCzoch/DroidMessage#readme",
   "dependencies": {
-    "electron": "^2.0.4"
+    "source-map-support": "^0.5.5"
+  },
+  "devDependencies": {
+    "electron": "2.0.0",
+    "electron-builder": "^20.11.1",
+    "electron-webpack": "^2.0.1",
+    "webpack": "^4.8.1"
+  },
+  "files": [
+    "src/main"
+  ],
+  "resolutions": {
+    "webpack-sources": "1.0.1"
   }
 }
